<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <TextView
        android:id="@+id/tv_current_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_title"
        android:textSize="16sp"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/tv_current_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorGrey"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_current_title"
        tools:text="14:12"/>
    <TextView
        android:id="@+id/tv_weather_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_current_time"
        tools:text="Sunny"/>
    <TextView
        android:id="@+id/tv_real_feel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_weather_type"
        tools:text="RealFeel 16°"/>
    <TextView
        android:id="@+id/tv_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_real_feel"
        tools:text="16°C"/>
    <ImageView
        android:id="@+id/iv_weather_type"
        android:layout_width="128dp"
        android:layout_height="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@android:drawable/ic_menu_compass"/>
    <TextView
        android:id="@+id/tv_humidity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/humidity_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_uv_title"
        app:layout_constraintTop_toBottomOf="@id/tv_temperature"/>
    <TextView
        android:id="@+id/tv_uv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uv_index_title"
        app:layout_constraintStart_toEndOf="@id/tv_humidity_title"
        app:layout_constraintEnd_toStartOf="@id/tv_wind_title"
        app:layout_constraintTop_toTopOf="@id/tv_humidity_title"/>
    <TextView
        android:id="@+id/tv_wind_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind_speed_title"
        app:layout_constraintStart_toEndOf="@id/tv_uv_title"
        app:layout_constraintTop_toTopOf="@id/tv_humidity_title"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tv_humidity_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_humidity_title"
        app:layout_constraintTop_toBottomOf="@id/tv_humidity_title"
        tools:text="23%"/>
    <TextView
        android:id="@+id/tv_uv_index"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uv_normal"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_uv_title"
        app:layout_constraintTop_toBottomOf="@id/tv_uv_title"/>
    <TextView
        android:id="@+id/tv_wind_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_wind_title"
        app:layout_constraintTop_toBottomOf="@id/tv_wind_title"
        tools:text="22 khm"/>
</androidx.constraintlayout.widget.ConstraintLayout>